force-app/main/default/objects/User/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User accepts in store appointments</description>
    <inlineHelpText>Please tick this box if the user accepts store appointments</inlineHelpText>
    <label>Store Appointment</label>
    <type>Checkbox</type>
</CustomField>