force-app/main/default/objects/User/fields/Commercial_Type__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Type__c</fullName>
    <label>Commercial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>