force-app/main/default/objects/User/fields/countries__c.field-meta.xml
<CustomField>
    <fullName>countries__c</fullName>
    <description>List of countries where the user can work</description>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>