force-app/main/default/objects/User/fields/Default_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Default_Sales_Organization__c</fullName>
    <description>La organización de ventas por defecto para el comercial</description>
    <inlineHelpText>The default sales organization for sales and distribution</inlineHelpText>
    <label>Default Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>