force-app/main/default/objects/User/fields/Distribution_channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_channel__c</fullName>
    <label>Distribution channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10 Third Party</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 Associates</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 Subsidiaries</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 National Builders</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40 Intercompany</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50 Others</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Retail</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>65 eCommerce</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>70 Trade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>