force-app/main/default/objects/User/fields/DistributionChannel_Text__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel_Text__c</fullName>
    <description>MultipickList Distribution Channel to Text</description>
    <label>DistributionChannel Text</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>