force-app/main/default/objects/User/fields/Does_this_position_have_a_sales_budget__c.field-meta.xml
<CustomField>
    <fullName>Does_this_position_have_a_sales_budget__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Does this position have a sales budget?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>