force-app/main/default/objects/User/fields/Es_Comisionista__c.field-meta.xml
<CustomField>
    <fullName>Es_Comisionista__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Comisionista?</label>
    <type>Checkbox</type>
</CustomField>