force-app/main/default/objects/User/fields/Execution_Context__c.field-meta.xml
<CustomField>
    <fullName>Execution_Context__c</fullName>
    <description>User&apos;s execution context</description>
    <label>Execution Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
                <label>DEUTSCHLAND</label>
            </value>
            <value>
                <fullName>ZA</fullName>
                <label>SOUTH AFRICA</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>DENMARK</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>UNITED STATES</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>FRANCE</label>
            </value>
            <value>
                <fullName>GB</fullName>
                <label>UNITED KINGDOM</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>SPAIN</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>POLAND</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>SWITZERLAND</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>ITALY</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>CANADA</label>
            </value>
            <value>
                <fullName>JP</fullName>
                <label>JAPAN</label>
            </value>
            <value>
                <fullName>VO</fullName>
                <label>VOID</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>BELGIUM</label>
            </value>
            <value>
                <fullName>PEXP</fullName>
                <label>PORCELANOSA EXPORT</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>AUSTRALIA</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>SCANDINAVIA</label>
            </value>
            <value>
                <fullName>IL</fullName>
                <label>ISRAEL</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>CHILE</label>
            </value>
            <value>
                <fullName>RD</fullName>
                <label>REPUBLICA DOMINICANA</label>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
                <isActive>false</isActive>
                <label>DEFAULT</label>
            </value>
            <value>
                <fullName>FLOWTESTUK</fullName>
                <isActive>false</isActive>
                <label>FLOWTESTUK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>