force-app/main/default/objects/User/fields/Headquarters_Spain_User__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Spain_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Headquarters Spain User</label>
    <type>Checkbox</type>
</CustomField>