force-app/main/default/objects/User/fields/Item_Type_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_Specialist__c</fullName>
    <label>Item Type Specialist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Item_Type</valueSetName>
    </valueSet>
</CustomField>