force-app/main/default/objects/User/fields/kunnr__c.field-meta.xml
<CustomField>
    <fullName>kunnr__c</fullName>
    <label>User&apos;s rep code in SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>