force-app/main/default/objects/User/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <description>Sales Office from Sales Org default</description>
    <inlineHelpText>Sales Office from Sales Org default</inlineHelpText>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Default_Sales_Organization__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sales_office2</valueSetName>
    </valueSet>
</CustomField>