force-app/main/default/objects/User/fields/Sales_Office_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Text__c</fullName>
    <description>PickList Sales Office to Text</description>
    <label>Sales Office Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>