force-app/main/default/objects/User/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Organización de Ventas</description>
    <inlineHelpText>Sales Org</inlineHelpText>
    <label>Sales Org</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>