force-app/main/default/objects/User/fields/SalesOrg_Text__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg_Text__c</fullName>
    <description>MultipickList SalesOrg to Text</description>
    <label>SalesOrg Text</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>