force-app/main/default/objects/User/fields/SAP_Pass__c.field-meta.xml
<CustomField>
    <fullName>SAP_Pass__c</fullName>
    <label>SAP Pass</label>
    <length>40</length>
    <type>Text</type>
</CustomField>