force-app/main/default/objects/User/fields/SAP_User__c.field-meta.xml
<CustomField>
    <fullName>SAP_User__c</fullName>
    <label>SAP User</label>
    <length>40</length>
    <type>Text</type>
</CustomField>