force-app/main/default/objects/User/fields/Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si un Comercial es o no el Responsable de la Tienda. Puede haber varios responsables en la misma Tienda</description>
    <inlineHelpText>Indicates whether or not a commercial is the store manager. There can be several people in charge in the same store</inlineHelpText>
    <label>Team Manager</label>
    <type>Checkbox</type>
</CustomField>