force-app/main/default/objects/User/validationRules/Sales_org_default.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_org_default</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
CONTAINS(SalesOrg_Text__c 	,  TEXT(Default_Sales_Organization__c)
)
)</errorConditionFormula>
    <errorDisplayField>Default_Sales_Organization__c</errorDisplayField>
    <errorMessage>The default sales organization must be in the list of selected organizations</errorMessage>
</ValidationRule>