force-app/main/default/objects/User/listViews/Outside_Sales_USA.listView-meta.xml
<ListView>
    <fullName>Outside_Sales_USA</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>CA,US</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Trade</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Outside Sales USA</label>
    <language>en_US</language>
    <sharedTo>
        <role>Porcelanosa_USA_Director_Regional</role>
    </sharedTo>
</ListView>