force-app/main/default/objects/User/listViews/Spain_Headquarters.listView-meta.xml
<ListView>
    <fullName>Spain_Headquarters</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Headquarters_Spain_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Spain Headquarters</label>
    <language>en_US</language>
    <sharedTo>
        <role>Manager</role>
    </sharedTo>
</ListView>