force-app/main/default/objects/User/listViews/Switzerland_Users.listView-meta.xml
<ListView>
    <fullName>Switzerland_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>CH</value>
    </filters>
    <label>Switzerland Users</label>
    <language>en_US</language>
</ListView>