force-app/main/default/objects/User/listViews/Urbatek.listView-meta.xml
<ListView>
    <fullName>Urbatek</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>urbatek,xtone</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.COUNTRY_CODE</field>
        <operation>notEqual</operation>
        <value>FR,GB,US</value>
    </filters>
    <label>Urbatek</label>
    <language>en_US</language>
    <sharedTo>
        <role>International_Projects</role>
        <role>Manager</role>
    </sharedTo>
</ListView>